SERVER-12092 "create" command shouldn't set "create" collection option